contuct section add

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 }
 
 .legal-solution {
+  height: 600px;
   background-image: url(../img/banner.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -40,4 +41,14 @@
 .h1 {
   font-size: 60px;
   color: red;
+}
+
+/* contuct section */
+
+.contact-btn-color {
+  background-color: #b68c5a;
+  border-radius: 5px;
+  padding: 10px 10px;
+  color: white;
+  margin-bottom: 50px;
 }
