--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,15 @@
   font-family: "Work Sans", sans-serif;
 }
 
+/* navbar section */
+
 .btn-color {
   background-color: #b68c5a;
 }
 
+ul li {
+  margin-top: 20px;
+}
 /* banner section  css*/
 .banner {
   width: 100%;
